--- a/ZoomerFit/Base.lproj/Main.storyboard
+++ b/ZoomerFit/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M0e-8z-4s9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M0e-8z-4s9">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -253,7 +253,7 @@ Rating: 5/5</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vkd-q4-CVR">
-                                <rect key="frame" x="73" y="106" width="151" height="99"/>
+                                <rect key="frame" x="64" y="49" width="287" height="75"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <accessibility key="accessibilityConfiguration" identifier="WelcomeLabel" label="WelcomeLabel"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
@@ -265,12 +265,23 @@ Rating: 5/5</string>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Event" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UHl-S7-9wx">
-                                <rect key="frame" x="213" y="133" width="79" height="44"/>
+                                <rect key="frame" x="63" y="190" width="79" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="userID placeholder" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mJA-TT-CFi">
+                                <rect key="frame" x="29" y="130" width="357" height="52"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="popularitychart.png" translatesAutoresizingMaskIntoConstraints="NO" id="wyF-bb-M3l">
+                                <rect key="frame" x="87" y="520" width="240" height="157"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="dcC-KQ-uJv"/>
@@ -293,16 +304,16 @@ Rating: 5/5</string>
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleAspectFit" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dn5-zZ-AkC">
-                                <rect key="frame" x="100" y="216" width="214" height="175"/>
+                            <button opaque="NO" contentMode="scaleAspectFit" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dn5-zZ-AkC">
+                                <rect key="frame" x="100" y="150" width="214" height="170"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Browse by Exercise" backgroundImage="exerciseButton.png"/>
                                 <connections>
                                     <action selector="exerciseButton:" destination="Evx-fI-6iW" eventType="touchUpInside" id="IfO-p1-RAp"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TZ7-Z0-ebv">
-                                <rect key="frame" x="100" y="455" width="214" height="166"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TZ7-Z0-ebv">
+                                <rect key="frame" x="100" y="439" width="214" height="170"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Browse by Coach" backgroundImage="coachButton.png">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -318,9 +329,8 @@ Rating: 5/5</string>
                             <constraint firstItem="U6c-yg-Ul9" firstAttribute="trailing" secondItem="dn5-zZ-AkC" secondAttribute="trailing" constant="100" id="Qk7-zF-Qpp"/>
                             <constraint firstItem="U6c-yg-Ul9" firstAttribute="trailing" secondItem="TZ7-Z0-ebv" secondAttribute="trailing" constant="100" id="fcq-iQ-Tzt"/>
                             <constraint firstItem="dn5-zZ-AkC" firstAttribute="leading" secondItem="U6c-yg-Ul9" secondAttribute="leading" constant="100" id="mFD-k7-MxD"/>
-                            <constraint firstItem="dn5-zZ-AkC" firstAttribute="top" secondItem="U6c-yg-Ul9" secondAttribute="top" constant="200" id="pu5-0p-NQo"/>
-                            <constraint firstItem="U6c-yg-Ul9" firstAttribute="bottom" secondItem="TZ7-Z0-ebv" secondAttribute="bottom" constant="200" id="tcK-KT-plA"/>
-                            <constraint firstItem="TZ7-Z0-ebv" firstAttribute="top" secondItem="dn5-zZ-AkC" secondAttribute="bottom" constant="100" id="wSU-Mj-Ntt"/>
+                            <constraint firstItem="dn5-zZ-AkC" firstAttribute="top" secondItem="U6c-yg-Ul9" secondAttribute="top" constant="150" id="pu5-0p-NQo"/>
+                            <constraint firstItem="U6c-yg-Ul9" firstAttribute="bottom" secondItem="TZ7-Z0-ebv" secondAttribute="bottom" constant="150" id="tcK-KT-plA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="U6c-yg-Ul9"/>
                     </view>
@@ -481,7 +491,7 @@ Rating: 5/5</string>
     <resources>
         <image name="The-Rock-Dwayne-Johnson-gym-9.jpg" width="1080" height="1080"/>
         <image name="ZoomerFitLogo.png" width="1002" height="267"/>
-        <image name="arrow.left" catalog="system" width="128" height="98"/>
+        <image name="arrow.left" catalog="system" width="64" height="48"/>
         <image name="athleanx.jpg" width="468" height="612"/>
         <image name="carousel1.png" width="447" height="294"/>
         <image name="christianfleenor.jpg" width="456.75" height="444.75"/>
@@ -489,14 +499,15 @@ Rating: 5/5</string>
         <image name="coachButton.png" width="365" height="250"/>
         <image name="diamondcut.jpeg" width="225" height="225"/>
         <image name="ebenezer samuel.jpeg" width="201" height="251"/>
-        <image name="ellipsis" catalog="system" width="128" height="37"/>
+        <image name="ellipsis" catalog="system" width="64" height="18"/>
         <image name="exerciseButton.png" width="366" height="250"/>
-        <image name="house" catalog="system" width="128" height="110"/>
-        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
-        <image name="person.circle" catalog="system" width="128" height="121"/>
+        <image name="house" catalog="system" width="64" height="54"/>
+        <image name="magnifyingglass" catalog="system" width="64" height="56"/>
+        <image name="person.circle" catalog="system" width="64" height="60"/>
         <image name="placeholder_profile.png" width="900" height="940"/>
+        <image name="popularitychart.png" width="347" height="258"/>
         <image name="sign in.png" width="1619" height="776"/>
-        <image name="star" catalog="system" width="128" height="116"/>
+        <image name="star" catalog="system" width="64" height="58"/>
         <image name="zoomer login background.png" width="274.55999755859375" height="540"/>
     </resources>
 </document>
